<?xml version="1.0"?>
<package format="2">
  <name>dev_tools</name>
  <version>0.0.0</version>
  <description>The dev_tools package</description>

  <maintainer email="arusso@todo.todo">arusso</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Other dependencies -->

</package>